samples/_failures_safe/1761168842_12f4c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75184b04.c: In function ‘main’:
./samples/SAFE/__tmp_75184b04.c:160:9: error: expected declaration or statement at end of input
  160 |         printf("%02x ", (unsigned char)output_buffer[i]);
      |         ^~~~~~
./samples/SAFE/__tmp_75184b04.c:160:9: error: expected declaration or statement at end of input
